[package]
name = "wypes_lib"
version = "1.0.0"
edition = "2021"
license = "Apache 2.0"

[lib]
crate-type = ["cdylib"]

[dependencies.napi]
version = "2"
default-features = false
# see https://nodejs.org/api/n-api.html#node-api-version-matrix
features = ["napi8"]

[dependencies.napi-derive]
version = "2"
features = ["type-def"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
